--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset=utf-8>
     <title>Product test</title>
+    <link href="./main.css" rel="stylesheet" type="text/css"
   </head>
   <body>
     <h1>Which product do you prefer?</h1>
-    <div>
-      <div>
+    <div class="inputSection">
+      <div class="inputs">
         <input placeholder="Something"></input>
       </div>
-      <button>Add</button>
+      <button class="addOption">Add</button>
     </div>
     <button>DONE!</button>
-  </body>
+   </body>
 </html>
